--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
     "bootstrap": "^5.0.0-beta2",
+    "jqeury": "0.0.1-security",
+    "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
